--- a/algebra_assignment_2.tex
+++ b/algebra_assignment_2.tex
@@ -261,4 +261,20 @@
   \end{align*}
 \end{exercise}
 
+\begin{exercise}
+  Find the Wedderburn decomposition of $\R G$ where $G$ is a group of
+  \begin{enumerate}
+  \item
+    $\Z / 4 \Z$
+  \item
+    $S_3$
+  \item
+    $Q_8 = \set{\pm 1, \pm i, \pm j, \pm k}$
+  \item
+    $D_4 = \set{ \sigma, \tau | \tau^2 = \sigma^4 = e, \tau \sigma \tau = \sigma^{-1}}$
+  \end{enumerate}
+\end{exercise}
+\begin{proof}
+  
+\end{proof}
 \end{document}
