Finish all but the last two questions.

--- a/algebra_assignment_2.tex
+++ b/algebra_assignment_2.tex
@@ -335,6 +335,37 @@
   \end{enumerate}
 \end{exercise}
 \begin{proof}
-  
+  \begin{enumerate}
+  \item
+    $G=\Z / 4 \Z$:
+
+    Since $G = \set{\sigma: \sigma^4=e}$, we have 
+    \begin{align*}
+      \R G &= \R[x]/(x^4-1) \cong \R[x]/(x^2-1) \oplus \R[x]/(x^2+1) \\
+      &\cong \R[x]/(x-1) \oplus \R[x]/(x+1) \oplus \C \\
+      &\cong \R \oplus \R \oplus \C
+    \end{align*}
+  \item
+    $G = S_3$:
+    
+    \begin{align*}
+      \R G &= \R \oplus \R \oplus \R^{2 \times 2}
+    \end{align*}
+
+  \item
+    $G = Q_8$:
+
+    \begin{align*}
+      \R G = \R \oplus \R \oplus \R \oplus \R \oplus \R^{2\times2}
+    \end{align*}
+
+  \item
+    $G = D_4$:
+    
+    \begin{align*}
+      \R G = \R \oplus \R \oplus \R \oplus \R \oplus \R^{2\times2}
+    \end{align*}
+    
+  \end{enumerate}
 \end{proof}
 \end{document}
