Finish the first question.

--- a/topology_assignment_3.tex
+++ b/topology_assignment_3.tex
@@ -82,7 +82,7 @@
   \end{align*}
   and so
   \begin{align*}
-    \pi_{\alpha} \circ f  = \pi_{\varphi(\alpha)}.
+    \pi_{\alpha} \circ f  = \pi_{\varphi(\alpha)}
   \end{align*}
   is continous for all $\alpha \in A$. We conclude that $f$ is continuous (with respect to the weak topology).
 
@@ -93,8 +93,11 @@
   \end{align*}
   so
   \begin{align*}
-    \pi_{\alpha}\circ g = \pi_{\varphi^{-1}(\alpha)}.
+    \pi_{\alpha}\circ g = \pi_{\varphi^{-1}(\alpha)}
   \end{align*}
+  is continuous for all $\alpha \in A$.
+  
+  Thus both $f$ and $g$ are continuous, and the two spaces are homeomorphic. 
 \end{proof}
 \end{document}
 
