Finish the second question.

--- a/topology_assignment_3.tex
+++ b/topology_assignment_3.tex
@@ -101,7 +101,7 @@
 \end{proof}
 \begin{exercise}
   Let $A = B \cup C$ where $A,B,C$ are nonempty sets with $B \cap C = \emptyset$ and let $(X_{\alpha})_{\alpha \in A}$ be a family of topological spaces.
-  Prove that $\prod\limits_{\alpha \in A} X_{\alpha}$ is homeomorphic to $\prod\limits_{\lambda \in \Lambda} \prod\limits_{\alpha \in A_{\lambda}} X_{\alpha}$.
+  Prove that $\prod\limits_{\alpha \in A} X_{\alpha}$ is homeomorphic to $ \prod\limits_{\alpha \in B} X_{\alpha} \times \prod\limits_{\alpha \in C} X_{\alpha}$.
 \end{exercise}
 \begin{proof}
   We prove 8C part 1 in the textbook.
