Write out the third question.

--- a/topology_assignment_3.tex
+++ b/topology_assignment_3.tex
@@ -160,6 +160,23 @@
 
   Now, partitioning $A$ into $A_{1} = B$ and $A_{2} = C$ and applying this result yields the solution to the problem. 
 \end{proof}
+
+\begin{exercise}
+  \begin{enumerate}
+  \item
+    Suppose that the topology $\tau$ on $X$ is the weak topology induced by a family $(f_{\alpha})_{\alpha \in A}$ of functions $f_{\alpha}: X \to X_{\alpha}$ and let
+    $f: Y \to X$, where $Y$ is a topological space. Prove or disprove: if for each $\alpha \in A$, $f_{\alpha} \circ f$ is continuous at $y_0 \in Y$,
+    then $f$ is continuous at $y_0$.
+  \item
+    Suppose that the topology $\tau$ on $X$ is the quotient topology induced by a surjection $h:Z \to X$ and $f:X \to Y$, where $Y$ is a topological space.
+    \begin{enumerate}
+    \item
+      Prove or disprove: if $z_0 \in Z, h(z_0) \in U \subseteq X$, and $h^{-1}(U)$ is a nhood of $z_0$ in $Z$, then $U$ is a nhood of $h(z_0)$ in $X$.
+    \item
+      Prove or disprove: if $z_0 \in Z$ and $f \circ h$ is continuous at $z_0$, then $f$ is continuous at $h(z_0)$. 
+    \end{enumerate}
+  \end{enumerate}
+\end{exercise}
 \end{document}
 
 
