Wrote a rough draft of an answer.

--- a/topology_assignment_3.tex
+++ b/topology_assignment_3.tex
@@ -238,7 +238,7 @@
   \item
     $3. \implies 1.$
 
-    asasd
+    $1_E$ is continuous. So there exists some nhood of $x$, call it $U$, such that $1_E(V) \subseteq \set{1}$, that is $x \in V \subseteq E$, and $x_n \to x$, so $(x_n)$ is residually in $V$, that is the tail sequence is entirely in $E$!
   \end{itemize}
 \end{proof}
 
