Write out last question.

--- a/topology_assignment_3.tex
+++ b/topology_assignment_3.tex
@@ -252,7 +252,22 @@
      
   \end{itemize}
 \end{proof}
-
+\begin{exercise}
+  \begin{enumerate}
+  \item
+    From 10A, p.72 in the text: Answer questions, a), b), c) for the topological space described in 2 (the cocountable topology).
+  \item
+    Find an example of two distinct topologies, $\tau$ and $\sigma$, on the same set $X$ which have the same convergent sequences. Find an example of a discontinuous function $f(X, \tau) \to (X, \sigma)$ which is sequentially continuous. 
+  \end{enumerate}
+\end{exercise}
+\begin{proof}
+  \begin{enumerate}
+  \item
+    
+  \item
+    
+  \end{enumerate}
+\end{proof}
 \end{document}
 
 
